--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <div class="above-game">
       <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
       <a class="restart-button">New Game</a>
+      <a class="restart-button" style="display: none" id="sumbitScore" onclick="bestScoreSumbit()">Sumbit best score</a>
     </div>
 
     <div class="game-container">
@@ -83,7 +84,11 @@
         <a onclick="usernameSubmit()" class="retry-button">Submit</a>
       </p>
     </div>
+    <div class="above-game">
+      <a class="restart-button" href="/rank.html" style="margin-top: 3%;">排行榜</a>
+    </div>
   </div>
+
 
   <script src="js/bind_polyfill.js"></script>
   <script src="js/classlist_polyfill.js"></script>
@@ -96,6 +101,11 @@
   <script src="js/game_manager.js"></script>
   <script src="js/application.js"></script>
   <script src="js/username.js"></script>
+  <script>
+    if(localStorage.getItem("username") !== null){
+      document.getElementById("sumbitScore").style.display = "block";
+    }
+  </script>
 </body>
 
 </html>
